test/lit/pto/frontend_pipe_section_kind_verify_invalid.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @bad_cube_pipe_in_vector_section(%consumer_buf: i32) {
    pto.section.vector {
      pto.aic_initialize_pipe {id = 0, dir_mask = 1, slot_size = 1024}
        (c2v_consumer_buf = %consumer_buf : i32)
    }
    return
  }
}

// CHECK: error: 'pto.aic_initialize_pipe' op must be inside a cube kernel function or section
